--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
+<!DOCTYPE html>
+<head>
+  <title>Anna Dowlin</title>
+  <style>
+    body {
+      text-align: center;
+      background: black;
+      color: white;
+      font-family: helvetica;
+    }
+  </style>
+</head>
 <h1>Anna Dowlin</h1>
+<body></body>
 <p>Hi! I'm Anna Dowlin, a NYC-based marketer. Say hello!</P>
 <input type="email" placeholder="Your email">
 <input type="submit">
+</body>
