--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
   <style>
     body {
       text-align: center;
-      background: black;
+      background: url("http://dash.co/assets/anna-bg.png");
+      background-size: cover;
+      background-position: center;
       color: white;
       font-family: helvetica;
     }
+    p {
+      font-size: 22px;
+    }
+    input {
+      border: 0;
+      padding: 10px;
+      font-size: 18px;
+    }
+    input[type="submit"] {
+      background: red;
+      color: white;
+    }
   </style>
 </head>
-<h1>Anna Dowlin</h1>
-<body></body>
-<p>Hi! I'm Anna Dowlin, a NYC-based marketer. Say hello!</P>
-<input type="email" placeholder="Your email">
-<input type="submit">
+<body>
+  <img src="/assets/anna.png">
+  <p>Hi! I'm Anna Dowlin, a NYC-based marketer. Say hello!</P>
+  <input type="email" placeholder="Your email">
+  <input type="submit">
 </body>
